--- a/native-image-helper-maven-plugin/pom.xml
+++ b/native-image-helper-maven-plugin/pom.xml
@@ -151,6 +151,14 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.11.0</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <reporting>
@@ -179,5 +187,4 @@
             <url>https://repo.vanillazi.cn/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
-
 </project>
