--- a/native-image-helper-maven-plugin/pom.xml
+++ b/native-image-helper-maven-plugin/pom.xml
@@ -14,7 +14,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.version>3.8.6</maven.version>
-        <slf4j.version>1.7.36</slf4j.version>
+        <slf4j.version>2.0.3</slf4j.version>
         <junit.version>5.9.0</junit.version>
     </properties>
     <developers>
@@ -23,7 +23,7 @@
             <email>wanazi@foxmail.com</email>
         </developer>
     </developers>
-    <inceptionYear>2018</inceptionYear>
+    <inceptionYear>2022</inceptionYear>
     <dependencies>
         <dependency>
             <groupId>com.github.spotbugs</groupId>
@@ -34,6 +34,7 @@
             <groupId>com.mageddo.nativeimage</groupId>
             <artifactId>reflection-config-generator</artifactId>
             <version>2.3.4</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -48,7 +49,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.9.0</version>
+            <version>2.10</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -95,12 +96,6 @@
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <version>3.6.4</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -150,14 +145,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.11.0</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
