修正发布配置到父pom

--- a/native-image-helper-maven-plugin/pom.xml
+++ b/native-image-helper-maven-plugin/pom.xml
@@ -3,7 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <artifactId>native-image-helper</artifactId>
+        <groupId>com.tqd.tool.build</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <groupId>com.vanillazi.tool.build</groupId>
     <artifactId>native-image-helper-maven-plugin</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -164,14 +168,4 @@
             </plugin>
         </plugins>
     </reporting>
-    <distributionManagement>
-        <repository>
-            <id>vanillazi</id>
-            <url>https://repo.vanillazi.cn/repository/maven-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>vanillazi</id>
-            <url>https://repo.vanillazi.cn/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
