--- a/example/pom.xml
+++ b/example/pom.xml
@@ -30,75 +30,85 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.vanillazi.tool.build</groupId>
-                <artifactId>native-image-helper-maven-plugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
-                <configuration>
-                    <generatorConfigs>
-                       <generatorConfig>
-                           <groupId>${project.groupId}</groupId>
-                           <artifactId>${project.artifactId}</artifactId>
-                           <reflectionConfigs>
-                               <reflectionConfig>
-                                   <name>com.tqd.tool.build.PersonA</name>
-                                   <allDeclaredConstructors>true</allDeclaredConstructors>
-                                   <allPublicConstructors>true</allPublicConstructors>
-                                   <allDeclaredFields>true</allDeclaredFields>
-                                   <allPublicFields>true</allPublicFields>
-                               </reflectionConfig>
-                               <reflectionConfig>
-                                   <name>com.tqd.tool.build.Person</name>
-                                   <allDeclaredConstructors>true</allDeclaredConstructors>
-                                   <allPublicConstructors>true</allPublicConstructors>
-                                   <allDeclaredFields>true</allDeclaredFields>
-                                   <allPublicFields>true</allPublicFields>
-                               </reflectionConfig>
-                           </reflectionConfigs>
-                       </generatorConfig>
-                    </generatorConfigs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>generate</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-                <version>0.9.16</version>
-                <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>build-native</id>
-                        <goals>
-                            <goal>compile-no-fork</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                    <execution>
-                        <id>test-native</id>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <phase>test</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <imageName>example</imageName>
-                    <mainClass>${mainClass}</mainClass>
-                    <fallback>false</fallback>
-                    <verbose>true</verbose>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <profiles>
+        <profile>
+            <id>native</id>
+            <activation>
+                <property>
+                    <name>native</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.vanillazi.tool.build</groupId>
+                        <artifactId>native-image-helper-maven-plugin</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                        <configuration>
+                            <generatorConfigs>
+                                <generatorConfig>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <reflectionConfigs>
+                                        <reflectionConfig>
+                                            <name>com.tqd.tool.build.PersonA</name>
+                                            <allDeclaredConstructors>true</allDeclaredConstructors>
+                                            <allPublicConstructors>true</allPublicConstructors>
+                                            <allDeclaredFields>true</allDeclaredFields>
+                                            <allPublicFields>true</allPublicFields>
+                                        </reflectionConfig>
+                                        <reflectionConfig>
+                                            <name>com.tqd.tool.build.Person</name>
+                                            <allDeclaredConstructors>true</allDeclaredConstructors>
+                                            <allPublicConstructors>true</allPublicConstructors>
+                                            <allDeclaredFields>true</allDeclaredFields>
+                                            <allPublicFields>true</allPublicFields>
+                                        </reflectionConfig>
+                                    </reflectionConfigs>
+                                </generatorConfig>
+                            </generatorConfigs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>generate</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.9.16</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>test-native</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <imageName>example</imageName>
+                            <mainClass>${mainClass}</mainClass>
+                            <fallback>false</fallback>
+                            <verbose>true</verbose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
