--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -14,7 +14,7 @@ jobs:
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands:
-      - mvn clean compile package deploy -U -rf :example
+      - mvn clean compile package deploy -U
     useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
