--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -35,6 +35,9 @@ jobs:
     withLfs: false
     force: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  triggers:
+  - !BranchUpdateTrigger
+    branches: main
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
